fix(code block): Change colors in dark mode

--- a/src/assets/css/dark-colors.css
+++ b/src/assets/css/dark-colors.css
@@ -4,6 +4,7 @@
   --color-background-secondary: var(--color-darker);
   /* Text colors */
   --color-text: var(--color-light);
+  --color-light-text: var(--color-light-gray);
   /* Affirmative colors */
   --color-action-primary: var(--color-accent-secondary);
   --color-action-secondary: var(--color-accent-primary);
